レスポンシブ変更

--- a/scss_file/_mixin.scss
+++ b/scss_file/_mixin.scss
@@ -18,9 +18,11 @@ display: inline-table;}
 $layout-width-inner: 1180px;
 
 $breakpoints: (
-  "sp": "screen and (min-width: 360px)",
+  "sp": "screen and (min-width: 300px)",
+  "sp500": "screen and (min-width: 300px) and (max-width: 500px)",
   "tab": "screen and (min-width: 768px) and (max-width: #{$layout-width-inner - 1px})",
   "pc": "screen and (min-width:#{$layout-width-inner})",
+
 );
 
 
