--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -105,7 +105,6 @@ body {
   background: radial-gradient(rgba(102, 109, 119,0.8) 30%, rgba(102, 109, 119,0.3) 70%);
   display: none;
   z-index: 10000;
-  display: none;
 }
 
 .modal-wrapper {
@@ -185,7 +184,7 @@ body {
     height: 700px;
 
     h1 {
-      font-size: 5rem;
+      font-size: 4.3rem;
     }
   }
 
@@ -256,8 +255,6 @@ body {
     }
   }
 
-
-
   p {
     @include mq("sp") {
       margin-top: 20px;
@@ -272,7 +269,6 @@ body {
       margin-top: 40px;
       font-size: 4rem;
     }
-
   }
 
   .kaigyou::before {
@@ -281,107 +277,114 @@ body {
       white-space: pre;
     }
   }
+
   .what_is_iwith_point {
     @include mq("sp500") {
       display: none;
+    }
   }
 }
-}
-
 /*  iwithとは終了　*/
-
 /*  iwith実績　*/
-
-
+.iwith_performance {
+  h2 {
+    text-align: center;
+    font-size: 3rem;
+    margin-top: 1.5rem;
+  }
+}
 
 .iwith_performance_wrapper {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  margin: 10px;
-
-
-  h2 {
-    font-size: 3rem;
+    position: relative;
+  @include mq("sp") {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin: 10px;
   }
+  @include mq("tab") {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+  @include mq("pc") {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
 }
 
 .iwith_performances {
-  text-align: center;
+text-align: center;
+
   @include mq("sp") {
     margin-top: 2rem;
   }
   @include mq("tab") {
-
   }
-  @include mq("tab500") {
+  @include mq("pc") {}
 
-  }
-  @include mq("pc") {
-
-  }
-
-  p {
+  h3 {
+    margin-bottom: 2rem;
     @include mq("sp") {
-      font-size: 2rem;
+      font-size: 1.8rem;
     }
-    @include mq("tab") {
-
-    }
-    @include mq("tab500") {
-
-    }
-    @include mq("pc") {
-
-    }
+    @include mq("tab") {}
+    @include mq("tab500") {}
+    @include mq("pc") {}
   }
 
   img {
     width: 80%;
+    max-width: 500px;
     height: auto;
-  @include mq("sp") {
+  }
+}
 
+.ex_images {
+  display: inline-block;
+  text-align: left;
+  @include mq("sp") {
+    width: 80%;
+    font-size: rem;
+    max-width: 500px;
   }
   @include mq("tab") {
-
+    max-width: 500px;
   }
-  @include mq("tab500") {
 
-  }
-  @include mq("pc") {
-
-  }
+  @include mq("pc") {}
 }
-}
+
+
 
 /*  iwith実績終了　*/
-
-
 /* ページ内リンク調整用　*/
-
-.what_is_iwith::before, .iwith_performance::before {
-    content: "";
-    margin-top: -5rem;
-    height: 5rem;
-    display: block;
-    visibility: hidden;
+.iwith_performance::before,
+.what_is_iwith::before {
+  content: "";
+  margin-top: -5rem;
+  height: 5rem;
+  display: block;
+  visibility: hidden;
 }
 /* ページ内リンク調整用終了　*/
-
 /* float解除　*/
-
-
 .clearfix::after {
   @include clear_after;
 }
@@ -389,14 +392,10 @@ body {
 .clearfix {
   @include clear_fix;
 }
-
 /* float解除終了　*/
-
-
 /* 動作テスト用　*/
-
 .testtest {
-  padding-top: 10000px
+  padding-top: 10000px;
 }
 
 .border_check {
