--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -1,11 +1,4 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 4 version
-*/
 
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
 @import "scss_file/_variables.scss";
 @import "scss_file/_mixin.scss";
 @import "scss_file/_reset.scss";
@@ -295,12 +288,6 @@ body {
 /*  iwithとは終了　*/
 /*  iwith実績　*/
 .iwith_performance {
-  h2 {
-    text-align: center;
-    font-size: 3rem;
-    margin-top: 1.5rem;
-  }
-
   p {
     @include mq("sp") {
       text-align: center;
@@ -345,8 +332,8 @@ body {
     -ms-flex-direction: row;
     flex-direction: row;
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
   }
   @include mq("pc") {
     -webkit-box-orient: vertical;
@@ -354,8 +341,8 @@ body {
     -ms-flex-direction: row;
     flex-direction: row;
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
   }
 }
 
@@ -445,15 +432,16 @@ body {
     background-image: url("image/geometric-mobile.jpg");
     background-size: cover;
     margin-top: 5rem;
-    h2{
+
+    h2 {
       text-align: center;
-      padding: 3rem 0;
     }
   }
   @include mq("tab") {
     background-image: url("image/geographic.jpg");
     background-size: cover;
     margin-top: 6rem;
+
     h2 {
       font-size: 3rem;
     }
@@ -462,11 +450,11 @@ body {
     background-image: url("image/geographic.jpg");
     background-size: cover;
     margin-top: 6rem;
+
     h2 {
       font-size: 4rem;
     }
   }
-
 }
 
 .iwith-vision-wrapper {
@@ -477,6 +465,7 @@ body {
     max-height: 60rem;
     max-width: 45rem;
     padding-bottom: 3rem;
+
     p {
       font-size: 2rem;
     }
@@ -485,6 +474,7 @@ body {
     line-height: 4rem;
     height: 40rem;
     max-width: 80rem;
+
     p {
       font-size: 2.5rem;
     }
@@ -493,116 +483,13 @@ body {
     line-height: 4.5rem;
     height: 45rem;
     max-width: 100rem;
+
     p {
       font-size: 3rem;
     }
   }
-
 }
-
-
 /*  iwith vision 終了　*/
-
-/*  iwith 会社概要　開始　*/
-
-.company-summary-wrapper {
-  padding-bottom: 2rem;
-  @include mq("sp"){
-    h3{
-      padding: 2rem;
-      font-size: 2.5rem;
-      text-align: center;
-    }
-  }
-  @include mq("tab"){
-    h3 {
-      font-size: 3rem;
-    }
-  }
-  @include mq("pc"){
-    h3 {
-      font-size: 4rem;
-    }
-  }
-}
-
-.summary-table{
-  margin: 0 auto;
-  @include mq("sp") {
-
-  width: 95%;
-  max-width: 40rem;
- tr {
-  border: solid 1px black;
-}
-
-  th {
-    position: relative;
-    padding: 3rem 2.5rem 0 2.5rem;
-    margin-bottom: 3rem;
-  }
-
-  th:before {
-    position: absolute;
-    content: '';
-    bottom: -3px;
-    left: 0;
-    border: none;
-    border-left: solid 1rem transparent;
-    border-bottom: solid 1rem rgb(119, 195, 223);
-  }
-  th:after {
-    position: absolute;
-    content: '';
-    bottom: -3px;
-    left: 10px;
-    width: 270%;
-    border-bottom: solid 0.1rem rgb(119, 195, 223);
-  }
-
-  td {
-    padding-top: 3rem;
-    text-align: center;
-  }
-}
-
-  @include mq("tab") {
-    width: 80%;
-    max-width: 50rem;
-    tr {
-      font-size: 2rem;
-    }
-    th:after {
-      width: 300%
-    }
-    td {
-      text-align: right;
-    }
-
-  }
-
-  @include mq("pc") {
-    width: 70%;
-    max-width: 60rem;
-    tr {
-      font-size: 2rem;
-    }
-    th:after {
-      width: 300%
-    }
-    td {
-      text-align: right;
-    }
-  }
-
-
-}
-
-/*  iwith 会社概要終了　*/
-
-
-
-
 /*  iwith 問い合わせ*/
 #formWrap {
   width: 90%;
@@ -612,7 +499,7 @@ body {
   line-height: 120%;
   font-size: 90%;
   text-align: center;
-  height: 50rem;
+  height: auto;
 
   h3 {
     padding: 1rem 0 0.5rem;
@@ -700,14 +587,206 @@ textarea {
   }
 }
 /*  iwith 問い合わせ終了*/
-/*  iwith 会社概要*/
-/*  iwith 会社概要終了*/
+/*  iwith 会社概要　開始　*/
+.company-summary-wrapper {
+  @include mq("sp") {
+    h2 {
+      font-size: 2.5rem;
+      text-align: center;
+    }
+  }
+  @include mq("tab") {
+    h2 {
+      font-size: 3rem;
+    }
+  }
+  @include mq("pc") {
+    h2 {
+      font-size: 3rem;
+    }
+  }
+}
+
+.summary-table {
+  margin: 0 auto;
+  @include mq("sp") {
+    width: 95%;
+    max-width: 40rem;
+
+    tr {
+      border: solid 1px black;
+    }
+
+    th {
+      position: relative;
+      padding: 3rem 2.5rem 0;
+      margin-bottom: 3rem;
+    }
+
+    th:before {
+      position: absolute;
+      content: '';
+      bottom: -3px;
+      left: 0;
+      border: none;
+      border-left: solid 1rem transparent;
+      border-bottom: solid 1rem rgb(119, 195, 223);
+    }
+
+    th:after {
+      position: absolute;
+      content: '';
+      bottom: -3px;
+      left: 10px;
+      width: 270%;
+      border-bottom: solid 0.1rem rgb(119, 195, 223);
+    }
+
+    td {
+      padding-top: 3rem;
+      text-align: center;
+    }
+  }
+  @include mq("tab") {
+    width: 80%;
+    max-width: 50rem;
+
+    tr {
+      font-size: 2rem;
+    }
+
+    th:after {
+      width: 315%;
+    }
+
+    td {
+      text-align: right;
+    }
+  }
+  @include mq("pc") {
+    width: 70%;
+    max-width: 60rem;
+
+    tr {
+      font-size: 2rem;
+    }
+
+    th:after {
+      width: 315%;
+    }
+
+    td {
+      text-align: right;
+    }
+  }
+}
+/*  iwith 会社概要終了　*/
+/*  iwith ceo picture　*/
+.ceo-intro {
+  width: 100%;
+}
+
+.ceo-intro-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 20rem;
+  padding-bottom: 2rem;
+}
+
+.ceo-picture {
+  img {
+    width: 15rem;
+    height: auto;
+    padding-right: 1rem;
+  }
+}
+
+.ceo-picture-comment {
+  background-color: darken(#F6F6F4, 7%);
+  height: 19.8rem;
+  width: 15rem;
+  text-align: center;
+  @include mq("sp") {
+    h3 {
+      font-size: 1.5rem;
+    }
+
+    p {
+      display: inline-block;
+      font-size: 1.4rem;
+      padding-top: 1rem;
+    }
+  }
+}
+/*  iwith ceo picture　*/
+/*  iwith footer　*/
+.footer {
+  background-color: rgba(40,57,61,0.9);
+  color: #fff;
+  height: 10rem;
+  width: 100%;
+}
+
+.footer-wrapper {
+  height: 10rem;
+  margin: 0 auto;
+  max-width: 60rem;
+  padding: 0 2rem;
+
+  li {
+    list-style: none;
+  }
+
+  a {
+    color: white;
+  }
+  @include mq("sp") {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 1.4rem;
+
+    right {
+      font-size: 1.6rem;
+    }
+  }
+  @include mq("tab") {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.footers {
+  display: inline-block;
+  margin-right: 1rem;
+}
+/*  iwith footer　*/
 /* ページ内リンク調整用　*/
-.iwith_performance::before,
-.what_is_iwith::before,
+.company-summary::before,
 .iwith-vision::before,
-.company-summary::before
- {
+.iwith_performance::before,
+.what_is_iwith::before {
   content: "";
   margin-top: -5rem;
   height: 5rem;
@@ -715,6 +794,35 @@ textarea {
   visibility: hidden;
 }
 /* ページ内リンク調整用終了　*/
+.head-design {
+  h2 {
+    position: relative;
+    text-align: center;
+    margin: 1.5rem auto;
+    width: 30rem;
+    font-size: 3rem;
+    border-top: solid 2px black;
+    border-bottom: solid 2px black;
+  }
+
+  h2:after,
+  h2:before {
+    content: '';
+    position: absolute;
+    top: -7px;
+    width: 2px;
+    height: calc(100% + 14px);
+    background-color: black;
+  }
+
+  h2:before {
+    left: 7px;
+  }
+
+  h2:after {
+    right: 7px;
+  }
+}
 /* float解除　*/
 .clearfix::after {
   @include clear_after;
