--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -1,4 +1,3 @@
-
 @import "scss_file/_variables.scss";
 @import "scss_file/_mixin.scss";
 @import "scss_file/_reset.scss";
@@ -136,68 +135,43 @@ body {
   align-items: center;
 }
 /*  モーダル部分終了　*/
+
 /*  トップコンテンツ部分　*/
-.top-contents {
-  @include mq("sp") {
-    height: 300px;
-  }
-  @include mq("tab") {
-    height: 700px;
-  }
-  @include mq("pc") {
-    height: 700px;
-  }
+
+#WebGL-output {
+  position: relative;
+  z-index: 100;
 }
 
-.top-contents-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+.webgl-h1 {
   position: absolute;
-  width: 100%;
-  background-image: url("image/iwith_top_image.png");
-  background-size: cover;
-  z-index: 10;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  z-index: 200;
+  text-align: center;
+  background-color: rgba(40,57,61,0.5);
   color: white;
-  font-weight: bold;
   @include mq("sp") {
-    height: 300px;
-
-    h1 {
-      font-size: 1.69rem;
-    }
+    width: 30rem;
+    font-size: 1.69rem;
+  }
     @include mq("tab") {
-      height: 700px;
-
-      h1 {
-        font-size: 4.4rem;
-      }
+      top: 47%;
+      width: 80rem;
+      font-size: 4.4rem;
     }
     @include mq("pc") {
-      height: 700px;
-
-      h1 {
-        font-size: 4.3rem;
-      }
-    }
-
-    h1 {
-      background-color: rgba(40,57,61,0.5);
+      top: 47%;
+      width: 80rem;
+      font-size: 4.4rem;
     }
   }
-}
 
-.canvas {
-  position: fixed;
-  z-index: 100000;
-}
 /*  トップコンテンツ部分終了　*/
+
 /*  iwithとは　*/
 .what_is_iwith {
   background-color: darken(#F6F6F4, 7%);
@@ -692,13 +666,13 @@ textarea {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   height: 20rem;
-  padding-bottom: 2rem;
+  padding: 2rem 0;
 }
 
 .ceo-picture {
@@ -753,12 +727,12 @@ textarea {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     font-size: 1.4rem;
 
     right {
@@ -770,15 +744,14 @@ textarea {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 }
 
 .footers {
-  display: inline-block;
   margin-right: 1rem;
 }
 /*  iwith footer　*/
